<!--
  Copyright (c) 2012 vinsnet<vinsnet@gmail.com>.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      vinsnet<vinsnet@gmail.com> - initial API and implementation
-->
<resources>

    <string name="app_name">CompteurTarot</string>
    <string name="menu_settings">Settings</string>
    <string name="ma_title">Score tarots</string>
    <string name="ma_new_game">Nouvelle partie</string>
    <string name="ma_restore_game">Reprendre la derniere partie</string>
    <string name="ma_erase_data">Effacer toutes les données</string>
    <string name="dsa_title">Partie en cours</string>
    <string name="dsa_addRound">Ajouter 1 manche</string>
    <string name="dsa_returnToRound">Retour à la manche</string>
    <string name="cca_title">Choisir un joueur</string>
    <string name="cca_add_player">Ajouter un joueur</string>
    <string name="cca_start_game">Jouer la partie</string>
    <string name="ara_title">AddRoundActivity</string>
    <string name="ara_validateBidding">OK</string>
    <string name="ara_nb_bouts">Nb bouts</string>
    <string name="ara_score">Nb points</string>
    <string name="ara_add">Ajouter …</string>
    <string name="ara_round_result_win">Gagnée</string>
    <string name="ara_round_result_loose">Perdue</string>
    <string name="ara_save_round">Sauvegarder</string>

</resources>
