<!--
  Copyright (c) 2012 vinsnet<vinsnet@gmail.com>.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
  
  Contributors:
      vinsnet<vinsnet@gmail.com> - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/ma_buttonNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startNewGame"
        android:text="@string/ma_new_game" />

    <Button
        android:id="@+id/ma_buttonRestoreGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:enabled="false"
        android:onClick="resumeGame"
        android:text="@string/ma_restore_game" />

    <Button
        android:id="@+id/ma_buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:enabled="true"
        android:onClick="eraseData"
        android:text="@string/ma_erase_data" />

</LinearLayout>
