<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/ara_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/ara_add_round_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/ara_choose_bidding_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/ara_bidding_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/ara_validate_bidding_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ara_validateBidding" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ara_bidding_round_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/ara_bidding_round_label"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.40" />

                <LinearLayout
                    android:id="@+id/ara_bidding_round_takers"
                    style="@style/AppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ara_bidding_round_defenders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ara_nb_bouts_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/ara_nb_bouts_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:text="@string/ara_nb_bouts" />

                <TextView
                    android:id="@+id/ara_nb_bouts_takers_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <SeekBar
                    android:id="@+id/ara_nb_bouts_seekBar"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.52"
                    android:max="3"
                    android:progress="2" />

                <TextView
                    android:id="@+id/ara_nb_bouts_defenders_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ara_score_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/ara_score_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"
                    android:text="@string/ara_score" />

                <TextView
                    android:id="@+id/ara_score_takers_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <SeekBar
                    android:id="@+id/ara_score_seekBar"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.52"
                    android:max="91"
                    android:progress="50" />

                <TextView
                    android:id="@+id/ara_score_defenders_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ara_petit_au_bout_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ara_poignees_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ara_bonus_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/ara_add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ara_add" />

            <LinearLayout
                android:id="@+id/ara_final_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/ara_result_label_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/ara_result_score_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/ara_result_total_explain_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/ara_result_total_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ara_result_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/ara_save_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveRound" 
            android:text="@string/ara_save_round" />
    </LinearLayout>

</RelativeLayout>
